--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
@@ -3258,3 +3258,40 @@ a.disabled {
 {
     position: relative;
 }
+.dangerMessagePerf
+{
+    color: #ff735a;
+}
+.successMessagePerf
+{
+    color: #5CB85C;
+}
+.perfBlockView .offerTitlePerf, .perfBlockView .description-area, .perfBlockView .btns-list
+{
+    display: none;
+}
+.perfNotEditing
+{
+    display: none;
+}
+.perfBlockView .perfNotEditing
+{
+    display: block;
+}
+.glyphicon-refresh-animate {
+    -animation: spin .7s infinite linear;
+    -webkit-animation: spin2 .7s infinite linear;
+}
+.chatMessageSending
+{
+    display: none;
+}
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
+}
