--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -1,5 +1,5 @@
 
-            {% for performance in performances|reverse %}
+            {% for performance in performances|reverse if performance.status == "published" %}
 
                 <article class="item clearfix">
                     <header class="heading">
@@ -9,7 +9,7 @@
 
                     <div class="row">
                         <div class="holder">
-                            {% for mediaOf in performance.media[0:1] %}
+                            {% for mediaOf in performance.media[0:2] if mediaOf.position == 1 %}
                                 <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
                             {% else %}
                                 <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
@@ -17,9 +17,9 @@
                         </div>
 
                         <div class="holder video">
-                            {% for mediaOf in performance.media[1:2] %}
+                            {% for mediaOf in performance.media[0:2] if mediaOf.position == 2 %}
                                 {% if mediaOf.mediaType == "video" %}
-                                    <iframe src="{{ mediaOf.link }}" width="395" height="274" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                                    <iframe src="{{ mediaOf.link }}" width="100%" height="auto" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                                 {% else %}
                                     <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
                                 {% endif %}
