--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
@@ -206,6 +206,8 @@
                             </div>
 
                             <div class="controls">
+                                <div class="hidden error dangerMessagePerf">You should enter all fields to publish performance</div>
+                                <div class="hidden success successMessagePerf">Your performance saved</div>
                                 <div class="button-gradient follow">
                                     <!--<button data-toggle="modal" data-target="#freeQuoteModalRegisterd" class="btn">REQUEST FREE QUOTE
                                     </button>-->
