--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
@@ -3295,3 +3295,7 @@ a.disabled {
     from { transform: scale(1) rotate(0deg);}
     to { transform: scale(1) rotate(360deg);}
 }
+.bx-loading
+{
+    display: none;
+}
