--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -11407,3 +11407,7 @@ a.disabled {
     from { -webkit-transform: scale(1) rotate(0deg); transform: scale(1) rotate(0deg);}
     to { -webkit-transform: scale(1) rotate(360deg); transform: scale(1) rotate(360deg);}
 }
+.bx-loading
+{
+    display: none;
+}
