--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/spotlight.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/spotlight.html.twig
@@ -16,20 +16,23 @@
             </thead>
             <tbody>
             {% for artist in artists %}
-                <tr>
+                <tr id="{{ artist.id }}">
                     <td>{{ artist.id }}</td>
                     <td>{{ artist.name }}</td>
                     <td>{{ artist.slug }}</td>
-                    <td>
+                    <td><span class="spotlightIndexAdmin">
                         {% if artist.spotlight is defined %}
                             {{ artist.spotlight }}
                         {% else %}
                             0
                         {% endif %}
+                            </span>
+                        <input type="number" class="spotlightInput">
                     </td>
                     <td>
                         {#{{ path('admin_manage_spotlight', {'id': artist.id }) }}#}
-                        <a href="#"><button type="button" class="btn btn-info">Manage</button></a>
+                        <a href="#"><button type="button" class="btn btn-info manageSpotlight">Manage</button></a>
+                        <a href="#"><button type="button" class="btn btn-info saveSpotlight">Save</button></a>
                     </td>
                 </tr>
             {% endfor %}
