--- a/app/Resources/views/_layout.html.twig
+++ b/app/Resources/views/_layout.html.twig
@@ -7,6 +7,7 @@
           content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
     <link rel="stylesheet" href="{{ asset('bundles/actedlegaldocs/css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/actedlegaldocs/css/admin.css') }}" />
 </head>
 <body>
     <div class="container-fluid">
@@ -21,5 +22,6 @@
     </div>
     <script src="{{ asset('bundles/actedlegaldocs/js/jquery.min.js') }}"></script>
     <script src="{{ asset('bundles/actedlegaldocs/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('bundles/actedlegaldocs/js/admin.js') }}"></script>
 </body>
 </html>
