fix artist categories dinamical add

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/categories.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/categories.html.twig
@@ -60,7 +60,7 @@
                 {% else %}
                 <div role="tabpanel" class="tab-pane fade" id="tabCatsl{{ category.slug }}">
             {% endif %}
-                <ul class="categories-list">
+                <ul class="categories-list artistCategories">
                     {% for catChild in category['__children'] %}
                     <li>
                         <ul>
