--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,3 +1,28 @@
+.recommendedIndexAdmin
+{
+    display: block;
+}
+.recommendedInput
+{
+    display: none;
+}
+.saveRecommended
+{
+    display: none;
+}
+
+.spotlightIndexAdmin
+{
+    display: block;
+}
+.spotlightInput
+{
+    display: none;
+}
+.saveSpotlight
+{
+    display: none;
+}
 /*! X-editable - v1.5.1
 * In-place editing with Twitter Bootstrap, jQuery UI or pure jQuery
 * http://github.com/vitalets/x-editable
