--- a/src/Acted/LegalDocsBundle/Resources/views/Default/spotlights.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/spotlights.html.twig
@@ -8,10 +8,10 @@
             <div class="prev-control"><i class="right fa fa-3x fa-angle-left"></i></div>
 
             {% for spotlight in homespotlight %}
-                {% if(spotlight.media.profiles.first) %}
+                {% if spotlight.media is defined %}
                     <div class="wrap">
-                        <a href="/profile/{{ spotlight.media.profiles.first.user.artist.slug }}">
-                            <img src="{{ spotlight.media.link }}" alt="{{ spotlight.media.name }}" />
+                        <a href="/profile/{{ spotlight.slug }}">
+                            <img src="{{ spotlight.media.link }}" alt="{{ spotlight.name }}" />
                         </a>
                         <!--<span class="glyphicon glyphicon-play"></span>
 
