added loader chat

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -159,7 +159,7 @@
                         </div>
                         <div class="controls">
                             <div class="button-gradient filled">
-                                <button class="btn" id="sendMsg" type="submit">Send</button>
+                                <button class="btn" id="sendMsg" type="submit"><span class="glyphicon glyphicon-refresh glyphicon-refresh-animate chatMessageSending"></span> Send</button>
                             </div>
                         </div>
                     </div>
