--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -2627,3 +2627,12 @@ a.disabled {
     from { transform: scale(1) rotate(0deg);}
     to { transform: scale(1) rotate(360deg);}
 }
+.chat-room .comments-list pre {
+    margin: 0 0 10px;
+    font-family: LatoRegular, Serif, sans-serif;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    font-size: 14px;
+    color: rgba(0, 0, 0, .87)
+}
