Fix add new btn retina

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
@@ -146,7 +146,7 @@
 
             {% endfor %}
 
-                    <div class="controls add">
+                    <div class="controls add abbNewPerfBtnBlock">
                         <div class="button-gradient orange white follow">
                             <button type="button" class="btn" id="addNewPerformanceBtn">Add new performance</button>
                         </div>
