--- a/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
@@ -58,7 +58,7 @@
     <div class="background-panel"></div>
 
     <div class="header-block">
-        <h2>Welcome here</h2>
+        <h2>Unleash your Talent</h2>
 
         <div class="form-group">
             <input class="search-input" id="homeSearchInput" type="text" placeholder="Search any entertainers">
